@@ -8,13 +8,14 @@ import com.hii.finalProject.cartItem.dto.CartItemDTO;
 import com.hii.finalProject.cartItem.entity.CartItem;
 import com.hii.finalProject.users.entity.User;
 import com.hii.finalProject.users.repository.UserRepository;
-import org.springframework.cache.annotation.CachePut;
-import org.springframework.cache.annotation.Cacheable;
+import com.hii.finalProject.users.service.UserService;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Service
 public class CartServiceImpl implements CartService {
@@ -22,15 +23,17 @@ public class CartServiceImpl implements CartService {
     private final CartRepository cartRepository;
     private final UserRepository userRepository;
     private final RedisTemplate<String, Object> redisTemplate;
+    private final UserService userService;
 
-    public CartServiceImpl(CartRepository cartRepository, UserRepository userRepository, RedisTemplate<String, Object> redisTemplate) {
+    public CartServiceImpl(CartRepository cartRepository, UserRepository userRepository, RedisTemplate<String, Object> redisTemplate, UserService userService) {
         this.cartRepository = cartRepository;
         this.userRepository = userRepository;
         this.redisTemplate = redisTemplate;
+        this.userService = userService;
     }
 
     @Override
-//    @Cacheable(value = "cartDTOs", key = "#userId")
+    @Transactional
     public CartDTO getCartDTO(Long userId) {
         Cart cart = getCartEntity(userId);
         return convertToDTO(cart);
@@ -48,7 +51,6 @@ public class CartServiceImpl implements CartService {
 
     @Override
     @Transactional
-//    @CachePut(value = "cartDTOs", key = "#userId")
     public CartDTO createCartDTO(Long userId) {
         Cart cart = createCartEntity(userId);
         return convertToDTO(cart);
@@ -79,14 +81,61 @@ public class CartServiceImpl implements CartService {
 
     @Override
     public void clearCart(Long userId) {
-
+        Cart cart = getCartEntity(userId);
+        cart.getItems().clear();
+        cartRepository.save(cart);
+        clearCartCache(userId);
     }
+
+    @Override
+    @Transactional
+    public void updateCartTotals(Long userId) {
+        Cart cart = getCartEntity(userId);
+        int totalPrice = 0;
+        int totalWeight = 0;
+
+        for (CartItem item : cart.getItems()) {
+            totalPrice += item.getQuantity() * item.getProduct().getPrice();
+            totalWeight += item.getQuantity() * item.getProduct().getWeight();
+        }
+
+        cart.setTotalPrice(totalPrice);
+        cart.setTotalWeight(totalWeight);
+        cartRepository.save(cart);
+        clearCartCache(userId);
+    }
+
+    @Override
+    public Integer getCartTotalWeight(String userEmail) {
+        Long userId = userService.getUserByEmail(userEmail);
+        CartDTO cartDTO = getCartDTO(userId);
+        return cartDTO.getTotalWeight();
+    }
+
 
     private CartDTO convertToDTO(Cart cart) {
         CartDTO cartDTO = new CartDTO();
         cartDTO.setId(cart.getId());
         cartDTO.setUserId(cart.getUser().getId());
-        cartDTO.setItems(cart.getItems().stream().map(this::convertToCartItemDTO).toList());
+
+        List<CartItemDTO> itemDTOs = cart.getItems().stream()
+                .map(this::convertToCartItemDTO)
+                .collect(Collectors.toList());
+
+        cartDTO.setItems(itemDTOs);
+
+        // Recalculate total price and total weight
+        int totalPrice = itemDTOs.stream()
+                .mapToInt(CartItemDTO::getTotalPrice)
+                .sum();
+
+        int totalWeight = itemDTOs.stream()
+                .mapToInt(CartItemDTO::getTotalWeight)
+                .sum();
+
+        cartDTO.setTotalPrice(totalPrice);
+        cartDTO.setTotalWeight(totalWeight);
+
         return cartDTO;
     }
 
@@ -96,7 +145,10 @@ public class CartServiceImpl implements CartService {
         dto.setProductId(cartItem.getProduct().getId());
         dto.setProductName(cartItem.getProduct().getName());
         dto.setQuantity(cartItem.getQuantity());
-        dto.setPrice(Double.valueOf(cartItem.getProduct().getPrice()));
+        dto.setPrice(cartItem.getProduct().getPrice());
+        dto.setTotalPrice(cartItem.getQuantity() * cartItem.getProduct().getPrice());
+        dto.setWeight(cartItem.getProduct().getWeight());
+        dto.setTotalWeight(cartItem.getQuantity() * cartItem.getProduct().getWeight());
         return dto;
     }
 }
